# octree-visualizer

./: .gitignore  LICENSE  README.md  flow  start.sh
cpp-backend/: CMakeLists.txt  main.cpp
opengl-visualizer/: package-lock.json  package.json
opengl-visualizer/src/components/: Modal.svelte  NewTree.svelte  SettingsModal.svelte  Sidebar.svelte  Visualizer.svelte
opengl-visualizer/src/lib/: constants.js  store.js
opengl-visualizer/src/routes/: +page.svelte
